tests/invalid/type_error_use_module.err_exp
type_error_use_module.m:018: In clause for predicate `main'/2:
type_error_use_module.m:018:   in argument 1 of call to predicate
type_error_use_module.m:018:   `io.write_line'/3:
type_error_use_module.m:018:   error: [38;5;203mundefined[39;49m symbol [38;5;87m`init'/0.[39;49m
type_error_use_module.m:018:   [38;5;226mThat symbol is defined in modules `map' and[39;49m
type_error_use_module.m:018:   [38;5;226m`type_error_use_module_helper_1', neither of[39;49m
type_error_use_module.m:018:   [38;5;226mwhich has an `:- import_module' declaration.[39;49m
type_error_use_module.m:018:   Note that symbols defined in modules accessed
type_error_use_module.m:018:   via `:- use_module' declarations must always be
type_error_use_module.m:018:   fully module qualified.
type_error_use_module.m:019: In clause for predicate `main'/2:
type_error_use_module.m:019:   error: call to [38;5;203mundefined[39;49m predicate [38;5;87m`do_main'/2.[39;49m
type_error_use_module.m:019:   [38;5;226mThat predicate is defined in module[39;49m
type_error_use_module.m:019:   [38;5;226m`type_error_use_module_helper_1', which does not[39;49m
type_error_use_module.m:019:   [38;5;226mhave an `:- import_module' declaration.[39;49m
